tests/ui/error-codes/E0033.stderr
error[E0033]: type `&dyn SomeTrait` cannot be dereferenced
  --> $DIR/E0033.rs:11:9
   |
LL |     let &invalid = trait_obj;
   |         ^^^^^^^^ type `&dyn SomeTrait` cannot be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0033`.
